[workspace]
members = [
    "core",
    "datatypes",
    "examples/basic",
    "examples/enc_conns",
    "examples/benchmark",
    "tests/functionality/basic_test",
    "examples/measuring_sec",
    "examples/ml_qos",
    "examples/open_vpn",
    "examples/combined",
]
resolver = "2"

[profile.release]
lto = true

[patch.crates-io]
pcap = { git = 'https://github.com/thegwan/pcap', branch = 'compile-optimized' }

