[package]
name = "websites"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
env_logger = "0.8.4"
iris-core = { path = "../../core", features = ["prometheus"] }
iris-compiler = { path = "../../compiler" }
iris-datatypes = { path = "../../datatypes" }
prometheus-client = "0.22.3"
